--- a/Library.csproj
+++ b/Library.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.10.0" />
+  </ItemGroup>
 </Project>
