--- a/Library.csproj
+++ b/Library.csproj
@@ -18,4 +18,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Library.Data\Models\" />
+  </ItemGroup>
 </Project>
