Added conn string to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Connection Strings": {
+    "LibraryDBConnection":  "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
