Added Nuget package for .Net Core EF Core CLI to the Library.csproj file

--- a/Library.csproj
+++ b/Library.csproj
@@ -18,6 +18,11 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />  
+  </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Library.Data\Models\" />
   </ItemGroup>
