Added same Connection String key and values to appsetting.Development.json

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "Connection Strings": {
+      "LibraryDBConnection": "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;",
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
-}
