Worked out the prob: in both appsettings.json files Ihad a space for conn string key. Should be ConnectionString. Inital Migration successful

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,12 +1,12 @@
 {
-    "Connection Strings": {
-      "LibraryDBConnection": "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;",
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "LibraryContext": "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;"
   }
+}
