Added an interface ILibraryItem. Added other classes to represent the resources we'll need

--- a/Library.csproj
+++ b/Library.csproj
@@ -25,5 +25,9 @@
 
   <ItemGroup>
     <Folder Include="Library.Data\Models\" />
+    <Folder Include="Library.Data\Models\Common\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Library.Data\Models\IListenable.cs" />
   </ItemGroup>
 </Project>
