--- a/Library.csproj
+++ b/Library.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+    <PackageReference Include="DotNetEnv" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
