Added Nuget pkg called dotenv.net. Dead easy to use. Now got env vars set up and conn string successfully hidden

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "LibraryContext": "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;"
+    "LibraryContext": "POSTGRES_CONNECTION_STRING"
   }
 }
