--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibraryContext": "User ID=eves;Password=coucou;Server=localhost;Port=5432;Database=Library;Integrated Security=true;Pooling=true;"
+    "LibraryContext": "POSTGRES_CONNECTION_STRING"
   }
 
 
