Made a view for index page of Cataglogue. Added h3 and some divs

--- a/Library.csproj
+++ b/Library.csproj
@@ -30,6 +30,7 @@
     <Folder Include="Library.Data\Models\LibraryItems\" />
     <Folder Include="ViewModels\" />
     <Folder Include="ViewModels\Catalogue\" />
+    <Folder Include="Views\Catalogue\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Library.Data\Models\IListenable.cs" />
